# be-tcf

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  catalog_tovarov.csv  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/archive/: ruff.yml  test.yml  trivy.yml
.github/workflows/: ci-cd.yml  deploy.yml  dev.yml  prod.yml  test.yml  trivy.yml
chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
chart/templates/: 02-deployment.yaml  02-service.yaml  03-ingress.yaml  04-ingress.yaml
migrations/: diagram.txt  diogram.txt  env.py  seed.sql
migrations/versions/: 059e5d6c62fe_refactor_users_add_customer_type_and_.py  073f2af8b3ac_upd_balance.py  0c288ad36040_refactor_product_remove_sub_category_.py  17576ba06e30_user_drop_counterparty.py  20b5a18cbc95_add_email_do_order.py  2724533d218d_categories_remove_seo_name_column.py  32d814914828_add_cart_id_to_cart_offers.py  35abf5288352_refactor_users_add_customer_type_and_.py  370c8d5aea37_refactor_users.py  394f56ed4ea8_initial_migration.py  417ec20c1d0f_refactor_waybill_change_name_of_column.py  4f368117b1f1_refactor_orders.py  5bcb0493593b_refactor_user_add_fastapi_users.py  5c83a73dce7b_refactor_subcategory_remove_category_.py  6c0af3710fce_add_currencies.py  6d020132622d_add_waybill_waybilloffer_stockmovement_.py  709bd83c8a6f_refactor_offers_move_address_id_to_.py  71913273cbc3_user_update_user_table.py  72a38b052d6d_user_drop_fields.py  827e7e03a057_remove_addresses.py  8513e82972d9_initial_migration.py  854d349fc48f_add_user_balance_history.py  8dcc187a59e4_product_add_hnsw_index_for_embedding.py  918924714c75_refactor_models.py  9d6164e07ac4_refactor_db_structure.py  a2a0f8cefca8_product_add_embedding_column.py  a577e5a38788_waybill_add_note.py  a8e832e47321_initial_migration.py  a9b33566ba3f_add_customer_for_waybill.py  b280e1ec18ce_add_email_do_order.py  b555b6ffe3c6_initial_migration.py  bd0025b33089_upd_type_for_currencies.py  bee7f8de8bac_add_balance.py  c1eb870b0d0e_refactor_address.py  c942c879d3e3_add_order_cart_offer_order_offer_tables.py  cb9506fe8b9c_refactor_waybilloffer_remove_is_deleted_.py  ce5683ad444d_add_address_table.py  dd0e52adb02b_add_cart.py  e06874c40e37_feat_accesstoken_create_table.py  e2c6de04ee64_add_order_id_for_waybill.py  (+2 more)
src/: __main__.py  new_print.py
src/api/auth/: __init__.py  api_key.py  backend.py  better_auth.py  clerk.py  dependencies.py  strategy.py  transport.py  user_manager.py  utils.py
src/api/controllers/: api_microservice_version.py  create_entity_controller.py  pricing_controller.py  update_entity_controller.py  user_entity_controller.py
src/api/core/: audit_log.py  create_entity.py  integrations.py  price_service.py  update_entity.py  user_entity.py
src/api/dao/: address_dao.py  audit_log_dao.py  base.py  base_old.py  category_dao.py  helper.py  offer_dao.py  order_dao.py  order_offer_dao.py  product_dao.py  sub_category_dao.py  user_balance_history_dao.py  user_dao.py  waybill_dao.py  waybill_offer_dao.py
src/api/di/: __init__.py  di.py  (+5 more)
src/config/: __init__.py  config.py
src/docs/: docs.py  openapi.json
src/models/: README.md  __init__.py  access_token.py  address.py  audit_log.py  base.py  cart.py  cart_offer.py  category.py  models.py  offer.py  order.py  order_offer.py  product.py  stock_movement.py  sub_category.py  user.py  user_balance_history.py  waybill.py  waybill_offer.py
src/schemas/: address_schema.py  analytical_schema.py  audit_log_schema.py  category_schema.py  clerk_webhook_schema.py  enums.py  offer_schema.py  order_offer_schema.py  order_schema.py  product_schema.py  schemas.py  sub_category_schema.py  user_balance_history.py  user_schema.py  waybill_offer_schema.py  waybill_schema.py
src/tasks/: celery.py  notification.py  tasks.py
src/utils/: cache_coder.py  logging.py  pagination.py  singleton.py
tech/: create_embeddings.py  gsheet_exporter.py
tech/ai/: create_embeddings.py  generate_descriptions.py
tech/bitrix_migration/: maigration.ipynb  opt_generator.php  seo_duplicates.csv
templates/: pricing_email.html
templates/waybill/: waybill.html
tests/: conftest.py  conftest_sql.py  conftest_testcontiners.py
tests/controllers/: test_version.py
tests/integration/: test_category.py  test_sub_category.py
tests/mock/: categories.json  offers.json  products.json  sub_categories.json  users.json
tests/mock_data/: cocktail_labels.json  cocktails.json  images.json  labels.json  ratings.json
tests/services/: test_api_products.py
tests/unit/: test_health_check.py  test_sample.py  test_singleton.py  test_version.py
(+60 files in other folders)
